@@ -2,4 +2,4 @@ version = "@VERSION@"
 description = "Mirage Xen platform"
 archive(byte) = "oS.cma"
 archive(native) = "oS.cmxa"
-requires = "cstruct cstruct.syntax io-page lwt lwt.syntax xenstore xenstore.client shared-memory-ring shared-memory-ring.console shared-memory-ring.xenstore shared-memory-ring.lwt mirage-types mirage-clock-xen xen-gnt xen-evtchn"
+requires = "cstruct cstruct.syntax io-page lwt lwt.syntax xenstore xenstore.client shared-memory-ring shared-memory-ring.console shared-memory-ring.xenstore shared-memory-ring.lwt mirage-types mirage-clock-xen xen-gnt xen-evtchn mirage-profile"
