@@ -68,7 +68,9 @@ let run t =
             |None -> Time.Monotonic.(time () + of_seconds 86400.0) (* one day = 24 * 60 * 60 s *)
             |Some tm -> tm
           in
+          MProf.Trace.(note_hiatus Wait_for_work);
           block_domain timeout;
+          MProf.Trace.note_resume ();
           aux ()
         end in
   try
